# arv_control

./: .gitignore  Cargo.toml  op_gesture.py  rtmdet_hand.onnx  todo.md
.cargo/: config.toml
docs/: 键盘控制说明.md
src/: capture.rs  gesture.rs  input.rs  main.rs  mav.rs  settings.rs  video.rs
ui/: appwindow.slint
ui/components/: bottom_status_bar.slint  icon_button.slint  left_sidebar.slint  right_sidebar.slint  status_item.slint  top_ruler.slint
