[package]
name = "arv_control"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.8"
ffmpeg-next = "8.0"
log = "0.4"
env_logger = "0.11"
mavlink = "0.12"
anyhow = "1.0"
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
ndarray = "0.17"
image = "0.25"
nokhwa = { version = "0.10", features = ["input-native", "output-threaded"] }

[build-dependencies]
slint-build = "1.8"
